--- a/Chat.html
+++ b/Chat.html
@@ -1,5 +1,5 @@
 <HTMl>
-//Embedded Service Code Snippets
+    <!--Embedded Service Code Snippets-->
   <style type='text/css'>
     .embeddedServiceHelpButton .helpButton .uiButton {
       background-color: #005290;
