--- a/EmbeddedFlowTest.HTML
+++ b/EmbeddedFlowTest.HTML
@@ -1,6 +1,6 @@
 <HTMl>
   <!--Embedded Service Code Snippets-->
-<!-- <style type='text/css'>
+<style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
 		background-color: #005290;
 		font-family: "Arial", sans-serif;
@@ -8,7 +8,7 @@
 	.embeddedServiceHelpButton .helpButton .uiButton:focus {
 		outline: 1px solid #005290;
 	}
-</style> -->
+</style>
 
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 <script type='text/javascript'>
@@ -29,7 +29,7 @@
 
 		embedded_svc.init(
 			'https://openedgepay--uat.sandbox.my.salesforce.com',
-			'https://openedgepay--uat.sandbox.my.salesforce-sites.com/',
+			'https://openedgepay--uat.sandbox.my.site.com/successhub',
 			gslbBaseURL,
 			'00D8I0000000Max',
 			'TestLeadFlow',
