--- a/EmbeddedFlowTest.HTML
+++ b/EmbeddedFlowTest.HTML
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<HTMl>
+<Head>
+<title> Test Flow</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+</Head>
+<Body onload="init()">
+	<p>Flow Below</p>
+
+  <!--Embedded Service Code Snippets-->
 <HTMl>
   <!--Embedded Service Code Snippets-->
 <style type='text/css'>
