--- a/EmbeddedFlowTest.HTML
+++ b/EmbeddedFlowTest.HTML
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<HTMl>
-<Head>
-<title> Test Flow</title>
-<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-</Head>
-<Body onload="init()">
-	<p>Flow Below</p>
-
-	<!--Embedded Service Code Snippets-->
-<style type='text/css'>
+<html>
+<head>
+  <script>
+    window.onload = function() {
+      document.getElementById("myEmbeddedFlow").style.display = "block";
+    }
+  </script>
+</head>
+<body>
+  <div id="myEmbeddedFlow" style="display:none;">
+    <!-- your embedded flow code here -->
+    <style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
 		background-color: #005290;
 		font-family: "Arial", sans-serif;
@@ -58,4 +60,6 @@
 		initESW('https://service.force.com');
 	}
 </script>
-</HTMl>
+  </div>
+</body>
+</html>
