--- a/EmbeddedFlowTest.HTML
+++ b/EmbeddedFlowTest.HTML
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script>
-    window.onload = function() {
-      document.getElementById("myEmbeddedFlow").style.display = "block";
-    }
+    $(document).ready(function(){
+      $("#myEmbeddedFlow").show();
+    });
   </script>
 </head>
 <body>
