--- a/EmbeddedFlowTest.HTML
+++ b/EmbeddedFlowTest.HTML
@@ -10,8 +10,7 @@
 </head>
 <body>
   <div id="myEmbeddedFlow" style="display:none;">
-    <!-- your embedded flow code here -->
-   <style type='text/css'>
+    <!-- your embedded flow code here --><style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
 		background-color: #005290;
 		font-family: "Arial", sans-serif;
@@ -43,7 +42,7 @@
 			'https://openedgepay--gpipoc.sandbox.my.site.com/successhub',
 			gslbBaseURL,
 			'00D8M0000008aJ1',
-			'External_Knowledge_Search_Flow',
+			'External_lead_form',
 			{
 				
 			}
