--- a/EmbeddedFlowTest.HTML
+++ b/EmbeddedFlowTest.HTML
@@ -10,7 +10,8 @@
 </head>
 <body>
   <div id="myEmbeddedFlow" style="display:none;">
-    <!-- your embedded flow code here --><style type='text/css'>
+    <!-- your embedded flow code here -->
+<style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
 		background-color: #005290;
 		font-family: "Arial", sans-serif;
