--- a/EmbeddedFlowTest.HTML
+++ b/EmbeddedFlowTest.HTML
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script>
-    $(document).ready(function(){
-      $("#myEmbeddedFlow").show();
-    });
-  </script>
+<title>Page Title</title>
 </head>
 <body>
-  <div id="myEmbeddedFlow" style="display:none;">
-    <!-- your embedded flow code here -->
 <style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
 		background-color: #005290;
@@ -38,29 +31,24 @@
 		embedded_svc.settings.enabledFeatures = ['Flows'];
 		embedded_svc.settings.entryFeature = 'Flows';
 
-		embedded_svc.init(
-			'https://openedgepay--gpipoc.sandbox.my.salesforce.com',
-			'https://openedgepay--gpipoc.sandbox.my.site.com/successhub',
-			gslbBaseURL,
-			'00D8M0000008aJ1',
-			'External_lead_form',
-			{
-				
-			}
-		);
-	};
-
-	if (!window.embedded_svc) {
-		var s = document.createElement('script');
-		s.setAttribute('src', 'https://openedgepay--gpipoc.sandbox.my.salesforce.com/embeddedservice/5.0/esw.min.js');
-		s.onload = function() {
-			initESW(null);
+		// Modified code to automatically launch the flow
+		var launchESW = function() {
+			embedded_svc.startFlow('External_lead_form');
 		};
-		document.body.appendChild(s);
-	} else {
-		initESW('https://service.force.com');
-	}
-</script> 
-  </div>
+
+		if (!window.embedded_svc) {
+			var s = document.createElement('script');
+			s.setAttribute('src', 'https://openedgepay--gpipoc.sandbox.my.salesforce.com/embeddedservice/5.0/esw.min.js');
+			s.onload = function() {
+				initESW(null);
+				launchESW();
+			};
+			document.body.appendChild(s);
+		} else {
+			initESW('https://service.force.com');
+			launchESW();
+		}
+	};
+</script>
 </body>
 </html>
