--- a/EmbeddedFlowTest.HTML
+++ b/EmbeddedFlowTest.HTML
@@ -31,28 +31,24 @@
 		embedded_svc.settings.enabledFeatures = ['Flows'];
 		embedded_svc.settings.entryFeature = 'Flows';
 
-		embedded_svc.init(
-			'https://openedgepay--gpipoc.sandbox.my.salesforce.com',
-			'https://openedgepay--gpipoc.sandbox.my.site.com/successhub',
-			gslbBaseURL,
-			'00D8M0000008aJ1',
-			'External_lead_form',
-			{
-				
-			}
-		);
-	};
-
-	if (!window.embedded_svc) {
-		var s = document.createElement('script');
-		s.setAttribute('src', 'https://openedgepay--gpipoc.sandbox.my.salesforce.com/embeddedservice/5.0/esw.min.js');
-		s.onload = function() {
-			initESW(null);
+		// Modified code to automatically launch the flow
+		var launchESW = function() {
+			embedded_svc.startFlow('External_lead_form');
 		};
-		document.body.appendChild(s);
-	} else {
-		initESW('https://service.force.com');
-	}
+
+		if (!window.embedded_svc) {
+			var s = document.createElement('script');
+			s.setAttribute('src', 'https://openedgepay--gpipoc.sandbox.my.salesforce.com/embeddedservice/5.0/esw.min.js');
+			s.onload = function() {
+				initESW(null);
+				launchESW();
+			};
+			document.body.appendChild(s);
+		} else {
+			initESW('https://service.force.com');
+			launchESW();
+		}
+	};
 </script>
 </body>
 </html>
