--- a/EmbeddedFlowTest.HTML
+++ b/EmbeddedFlowTest.HTML
@@ -4,7 +4,7 @@
 
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-    <title>Unofficial SF - Frank's Fantastic External Pre-Fill Flow</title>
+    <title>EmbeddedFlowTest.HTML</title>
   </head>
 
   <body>
